--- a/FrontEndAngular/src/app/components/update-task/update-task.html
+++ b/FrontEndAngular/src/app/components/update-task/update-task.html
@@ -40,7 +40,8 @@
       </div>
     </div>
 
-    <button type="button" (click)="updateItem()" class="btn btn-primary mt-2">Update Task</button>
+    <!-- (click)="updateItem()"  -->
+    <button type="button" class="btn btn-primary mt-2">Update Task</button>
     <!-- add confirm for navigating away without saving changes -->
   </form>
 </div>
