--- a/FrontEndAngular/src/app/components/add-task/add-task.html
+++ b/FrontEndAngular/src/app/components/add-task/add-task.html
@@ -44,6 +44,6 @@
       </div>
     </div>
 
-    <button type="submit" (click)="addTask()" class="btn btn-primary mt-2">Add Task</button>
+    <!-- <button type="submit" (click)="addTask()" class="btn btn-primary mt-2">Add Task</button> -->
   </form>
 </div>
