--- a/FrontEndAngular/src/app/components/to-do-list/to-do-list.html
+++ b/FrontEndAngular/src/app/components/to-do-list/to-do-list.html
@@ -11,15 +11,11 @@
       </tr>
     </thead>
     <tbody>
-      <!-- @for (item of items; track $index) {
+      @for (item of items(); track $index) {
       <tr [ngStyle]="{ 'text-decoration': item.completed ? 'line-through' : 'none' }">
         <td>
-          <input
-            class="form-check-input"
-            type="checkbox"
-            [(ngModel)]="item.completed"
-            (ngModelChange)="updateCompletedTask(item)"
-          />
+          <input class="form-check-input" type="checkbox" [checked]="item.completed" />
+          <!-- (change)="updateCompletedTask(item)" -->
         </td>
 
         <th>{{ item.priority }}</th>
@@ -29,10 +25,10 @@
           <button [routerLink]="['/update-task', item.id]" class="btn btn-primary btn-sm m-1">
             Edit
           </button>
-          <button (click)="deleteItem(item.id)" class="btn btn-danger btn-sm m-1">Delete</button>
+          <!-- <button (click)="deleteItem(item.id)" class="btn btn-danger btn-sm m-1">Delete</button> -->
         </td>
       </tr>
-      } -->
+      }
     </tbody>
   </table>
 </div>
