changed Item from class to interface to make updatingCompleted easier. rewrote updateCompletedTask to toggleCompleted in to-do-list.ts and refactored updateCompleted in item.ts. updated input change and checked in to-do-list.html to match updated function name

--- a/FrontEndAngular/src/app/components/to-do-list/to-do-list.html
+++ b/FrontEndAngular/src/app/components/to-do-list/to-do-list.html
@@ -14,8 +14,12 @@
       @for (item of items(); track $index) {
       <tr [ngStyle]="{ 'text-decoration': item.completed ? 'line-through' : 'none' }">
         <td>
-          <input class="form-check-input" type="checkbox" [checked]="item.completed" />
-          <!-- (change)="updateCompletedTask(item)" -->
+          <input
+            class="form-check-input"
+            type="checkbox"
+            [checked]="item.completed"
+            (change)="toggleCompletedTask(item)"
+          />
         </td>
 
         <th>{{ item.priority }}</th>
